--- a/hostel-attendance-management/package.json
+++ b/hostel-attendance-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "promptopia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^4.20.0",
+    "autoprefixer": "10.4.14",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.0",
     "chart.js": "^4.4.3",
-    "express": "^4.19.2",
-    "face-api.js": "^0.22.2",
-    "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1",
-    "next": "^14.2.3",
-    "react": "^18.3.1",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0",
+    "next": "^14.2.4",
+    "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "react-dom": "18.2.0",
+    "react-webcam": "^7.2.0",
+    "tailwindcss": "3.3.2"
   }
 }
