--- a/hostel-attendance-management/package.json
+++ b/hostel-attendance-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promptopia",
+  "name": "hostel-attendance-management",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.0",
     "chart.js": "^4.4.3",
+    "face-api.js": "^0.22.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "next": "^14.2.4",
