--- a/hostel-attendance-management/package.json
+++ b/hostel-attendance-management/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.20.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.0",
     "chart.js": "^4.4.3",
     "face-api.js": "^0.22.2",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "next": "^14.2.4",
