--- a/hostel-attendance-management/package.json
+++ b/hostel-attendance-management/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.1.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
     "postcss": "8.4.23",
